# Silent-Voice

./: .gitignore  CLAUDE.md  README.md  Silent-Voice-Complete-Build-Plan.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
docs/: HANDBOOK.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gector.rs  history.rs  lib.rs  logging.rs  main.rs  proofread.rs
src-tauri/src/audio/: capture.rs  gate.rs  mod.rs
src-tauri/src/llm/: llama.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/models/: downloader.rs  hf.rs  mod.rs  registry.rs
src-tauri/src/system/: autostart.rs  foreground.rs  hardware.rs  hotkey.rs  inline_check.rs  mod.rs  overlay.rs  paste.rs  sherpa.rs  squiggle.rs  textfmt.rs  tray.rs  tts.rs
src-tauri/src/transcription/: mod.rs  server.rs  whisper.rs
src/components/dashboard/: ApiKeys.tsx  Guide.tsx  History.tsx  Home.tsx  ModelStore.tsx  Modes.tsx  Settings.tsx
src/components/dashboard/hf/: HfBrowser.tsx  SimpleMarkdown.tsx
src/components/onboarding/: Onboarding.tsx
src/components/overlay/: OverlayApp.tsx  RecordingOverlay.tsx
src/components/shared/: Badge.tsx  HotkeyRecorder.tsx  ModelCard.tsx  NavIcons.tsx  Page.tsx  ProviderLogo.tsx  Titlebar.tsx  WaveformVisualizer.tsx
src/hooks/: useHardwareInfo.ts  usePipeline.ts  useRuntimeSync.ts
src/services/: catalog.ts  format.ts  modes.ts  recommend.ts  tauriBridge.ts  updater.ts
src/stores/: historyStore.ts  modelStore.ts  settingsStore.ts  uiStore.ts  updateStore.ts
src/types/: index.ts
uia-probe/: Cargo.toml
uia-probe/src/: main.rs  overlay.rs
