[package]
name = "silent-voice"
version = "0.1.4"
description = "Free, local-first voice-to-text dictation"
authors = ["Silent Voice"]
edition = "2021"

[lib]
name = "silent_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture + playback (rodio plays the TTS WAV output)
cpal = "0.15"
hound = "3.5"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
libloading = "0.8"

# System integration
arboard = "3.4"
enigo = "0.2"
sysinfo = "0.32"

# Networking / model download
reqwest = { version = "0.12", features = ["stream", "json", "multipart", "rustls-tls"], default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

# Storage — history is a plain JSON file in %APPDATA%/SilentVoice (no database).
dirs = "5"
base64 = "0.22"
harper-core = { version = "2.5.0", features = ["concurrent"] }

[target.'cfg(windows)'.dependencies.winreg]
version = "0.52"

[target.'cfg(windows)'.dependencies]
# DXGI-based GPU detection
windows = { version = "0.58", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_System_Variant",
] }

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]
