[package]
name = "uia-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
harper-core = "2.5.0"
windows-core = "0.58"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
  "implement",
] }
